# harness_mvp

./: .gitignore  CONTROL_PLANE_EXTENDED_ARCHITECTURE.md  Enterprise_Harness_Architecture.drawio  Enterprise_harness_annotated_reference.drawio  Enterprise_harness_platform_arch_v2.drawio  Enterprise_harness_v1_reference_architecture.drawio  GAP_ANALYSIS_AND_REQUESTS.md  LLM-Safety-Suite-Harness.html  README.md  RUNBOOK.md  VALIDATION.md  agent-platform-baseline-janus.drawio  enterprise_harness_agentic_workflows.md  enterprise_harness_architecture_review.md  enterprise_harness_architecture_v3.md  enterprise_harness_base_layers_and_accountability.md  enterprise_harness_build_plan.md  enterprise_harness_conceptual_design.md  enterprise_harness_design.md  enterprise_harness_evaluation_guide.md  enterprise_harness_mvp_colab.ipynb  enterprise_harness_phase2_frontier_frameworks.md  enterprise_harness_phase2_integration_plan.md  enterprise_harness_spec_addendum_C1-C6.md  enterprise_harness_v1_architecture_review.md  hermes.json  nemoclaw.json  openclaw.json
harness/: .coverage  .gitignore  README.md  RESULTS_ITER1_real_runtime.md  conftest.py  pyproject.toml
harness/config/: budgets.yaml  golden_controls.yaml  harnesses.yaml  model_pricing.yaml  models.yaml  quorum.yaml  risk_weights.yaml  trust_policy.yaml
harness/contracts/: scenario_corpus.schema.json
harness/examples/: run_mock.py
harness/examples/fixtures/assets/: att_support_agent.json  http_demo_target.json  support_agent.json
harness/examples/fixtures/use_cases/: att_customer_support_high_risk.json  customer_support_high_risk.json
harness/src/harness/: __init__.py  __main__.py
harness/src/harness/adapters/: __init__.py
harness/src/harness/adapters/config/: __init__.py  defaults.py  loader.py
harness/src/harness/adapters/detectors/: __init__.py  detoxify_detector.py  presidio_detector.py  regex_detectors.py
harness/src/harness/adapters/drivers/: __init__.py  garak_driver.py  inspect_driver.py  nemo_driver.py  overlay_driver.py  pyrit_driver.py
harness/src/harness/adapters/evidence/: __init__.py  file_evidence.py
harness/src/harness/application/: __init__.py  acceptance.py  bundle.py  calibration.py  contextualize.py  endpoints.py  governance.py  judge.py  judge_calibration.py  orchestrator.py  probe.py  quarantine.py  readiness.py  remediation.py  replay.py  runner.py  scorecard.py  selection.py  stability.py
harness/src/harness/domain/: __init__.py  aggregate.py  contracts.py  gate.py  invariants.py  patterns.py  risk.py  secrets.py
harness/src/harness/interface/: __init__.py  capabilities.py  cli.py  dashboard.py  demo_target.py  factory.py  probe_server.py  report.py
harness/src/harness/ports/: __init__.py  detector_port.py  driver_port.py  evidence_port.py  model_port.py
harness/src/harness/registry/: __init__.py  harnesses.py
harness/src/harness/storage/: __init__.py  repository.py
harness/tests/: test_boundaries.py  test_bundle.py  test_config_strict.py  test_corpus_validation.py  test_costing.py  test_demo_target.py  test_e2e_mock.py  test_endpoints.py  test_gate.py  test_invariants.py  test_models.py  test_policy_hash.py  test_quarantine.py  test_readiness.py  test_risk.py  test_scenarios.py  test_scorecard.py  test_secrets.py  test_selection.py  test_storage.py
(+33 files in other folders)
